1. Corrected the routing for signup and login in both mobile and desktop mode. 2. Created a margin between the signup and login button on the Navigation bar. 3. Removed the toggle mode in both the signup and login page.

--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -87,6 +87,13 @@
   display: none; /* Hidden on desktop */
 }
 
+.btn-container {
+  display: flex;
+  justify-content: space-between; /* Adjust alignment */
+  gap: 10px; /* Adds space between the two buttons */
+  margin-right: 7px;
+}
+
 /* Media query for screens 960px wide or less */
 @media screen and (max-width: 960px) {
   /* Adjust positioning for smaller screens */
