1. Updated navbar 2.Added services, doctors, book appointment pages. Install npm install react-calendly.

--- a/client/src/components/pages/LogIn.css
+++ b/client/src/components/pages/LogIn.css
@@ -110,5 +110,6 @@
 /* Styling for the gray variant of the submit button */
 .gray {
     background: #eaeaea; /* Light gray background color */
-    color: #676767; /* Dark gray text color */
+    color: white; /* Dark gray text color */
+
 }
