--- a/client/src/components/pages/SignUp.css
+++ b/client/src/components/pages/SignUp.css
@@ -4,7 +4,7 @@
     flex-direction: column; /* Arrange children in a vertical column */
     margin: auto; /* Center the container horizontally */
     width: 600px; /* Set the container width */
-    margin-top: 200px; /* Space above the container */
+  
     background: #fff; /* White background color */
     padding-bottom: 30px; /* Space below the content inside the container */
 }
@@ -49,7 +49,7 @@
     margin: auto; /* Center horizontally */
     width: 480px; /* Set width of the input field container */
     height: 80px; /* Set height of the input field container */
-    background: black; /* Black background color */
+    background: rgb(36, 33, 33); /* Black background color */
     border-radius: 6px; /* Rounded corners for the input field container */
 }
 
@@ -101,7 +101,7 @@
     width: 220px; /* Set width of the button */
     height: 59px; /* Set height of the button */
     color: #fff; /* White text color */
-    background: #0b0b0b; /* Dark background color */
+    background: linear-gradient(90deg, rgb(5, 138, 240) 0%, rgb(26, 23, 23) 100%);
     border-radius: 50px; /* Rounded corners for the button */
     font-size: 19px; /* Font size for the button text */
     cursor: pointer; /* Pointer cursor on hover */
