--- a/client/src/components/service.css
+++ b/client/src/components/service.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 h1.heading {
-    font-size: 80px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
     text-align: center;
     font-weight: 700;
     font-family: Poppins, sans-serif;
     margin-bottom: 10px;
     color:#5c606e;
+    margin-top: 30px;
  }
 
  p.heading.p__color {
