--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -73,11 +73,16 @@
 .nav-links-mobile {
   display: none;
   margin-right: 10px;
-  border-radius: ;
 }
 
 .menu-icon {
   display: none;
+  color: #fff;
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  top: 18px;
+  right: 24px;
 }
 
 .btn-container {
@@ -131,16 +136,6 @@
     left: 0;
     transform: translate(25%, 50%);
   }
-/* 
-  .menu-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
-    cursor: pointer;
-  } */
 
   .fa-times {
     color: #fff;
@@ -167,5 +162,80 @@
     background: #fff;
     color: #242424;
     transition: 250ms;
+  }
+}
+
+/* Mobile Menu styling */
+@media screen and (max-width: 960px) {
+  .menu-icon {
+    display: block;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 0;
+    transition: all 0.5s ease;
+    background-color: #09131d;
+    z-index: 1;
+  }
+
+  .nav-menu.active {
+    left: 0;
+    opacity: 1;
+  }
+
+  .nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: block;
+    transition: background-color 0.3s ease;
+  }
+
+  .nav-links:hover {
+    background-color: #fff;
+    color: #242424;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 18px;
+    left: 24px;
+    transform: translateY(0%);
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 5px;
+    transition: all 0.3s ease-out;
+    border-radius: 40px;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+  }
+
+  .fa-times {
+    color: #fff;
+  }
+
+  .fa-bars {
+    color: #fff;
   }
 }
