--- a/client/src/components/pages/LogIn.css
+++ b/client/src/components/pages/LogIn.css
@@ -1,10 +1,11 @@
 .container {
     display: flex;
     flex-direction: column;
-    margin: auto;
     width: 600px;
-    background: #fff;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+    margin: 40px auto;
 }
 
 .header {
